<resources>
    <string name="app_name">Story App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="full_name">Full name</string>
    <string name="email" translatable="false">Email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_minimum_length">Must be at least 8 characters</string>
    <string name="have_account">Have account?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="home" translatable="false">Home</string>
    <string name="greet_user">Hello, %1$s</string>
    <string name="add_story">Add story</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="dialog_continue">Continue</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_fill_the_form">Please fill the form correctly!</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="min_read">%1$d min read</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="discard_changes">Discard changes</string>
    <string name="discard_dialog_message">You\'ve made changes that haven\'t been published yet.\nIf you discard changes, your unpublished changes will be deleted. You can\'t undo this action</string>
    <string name="discard">Discard</string>
    <string name="dialog_negative">Cancel</string>
    <string name="seconds_ago">%1$d seconds ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="weeks_ago">%1$d weeks ago</string>
    <string name="months_ago">%1$d months ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="no_image_selected">No image selected</string>
    <string name="no_story_added">No story added</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type" translatable="false">Hybrid</string>
    <string name="story">Story</string>
    <string name="retry">Retry</string>
    <string name="location">Location</string>
    <string name="request_location_permission">Request location permission</string>
    <string name="request_location_permission_message">This app need you to allow location permission to send message with location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>