<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add.AddActivity">

    <ImageView
        android:id="@+id/iv_add_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/baseline_image_24"
        android:textColor="@color/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_edittext"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo_preview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/green2"
        android:enabled="true"
        android:text="@string/gallery"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_submit"
        app:layout_constraintEnd_toStartOf="@id/btn_add_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_add_submit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/green2"
        android:enabled="true"
        android:text="@string/camera"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_gallery"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_submit"
        app:layout_constraintStart_toEndOf="@id/btn_add_gallery" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:enabled="true"
        android:text="@string/submit"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>